[package]
name = "s3-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.13.0", default-features = false, features = ["macros", "sync", "rt"] }
futures-executor = "0.3.16"
